--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,174 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap");
 body {
   margin: 0;
   font-family: 'Quicksand', 'Segoe UI', sans-serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.todo-form #submit-todo {
+  background: #db4c3f;
+  font-weight: bold;
+  color: white;
+  border-radius: 0.5rem;
+  border: 2px solid transparent;
+}
+
+.todo-form #submit-todo:hover {
+  background: #fa5748;
+}
+
+.todo-form #submit-todo:disabled {
+  opacity: 0.5;
+}
+
+.todo-form #todo-input {
+  border-radius: 0.5rem;
+  border: 2px solid gray;
+  border-bottom: 3px solid gray;
+  opacity: 0.7;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+  font-weight: bold;
+  color: gray;
+}
+
+.todo-form #todo-input:focus {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 1;
+  border: 2px solid rgba(209, 123, 123, 0.5);
+  border-bottom: 3px solid rgba(209, 123, 123, 0.5);
+  -webkit-box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.15);
+}
+
+.todo-form #todo-input::-webkit-input-placeholder {
+  opacity: inherit;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.todo-form #todo-input:-ms-input-placeholder {
+  opacity: inherit;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.todo-form #todo-input::-ms-input-placeholder {
+  opacity: inherit;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.todo-form #todo-input::placeholder {
+  opacity: inherit;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.todo-form #todo-input:focus::-webkit-input-placeholder {
+  opacity: 0.65;
+}
+
+.todo-form #todo-input:focus:-ms-input-placeholder {
+  opacity: 0.65;
+}
+
+.todo-form #todo-input:focus::-ms-input-placeholder {
+  opacity: 0.65;
+}
+
+.todo-form #todo-input:focus::placeholder {
+  opacity: 0.65;
+}
+
+.todo-list li.list-group-item {
+  background: rgba(218, 92, 81, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: bold;
+  color: #494949;
+  border: 2px solid transparent !important;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
+}
+
+.todo-list li.list-group-item:hover {
+  border: 2px solid transparent !important;
+  background: rgba(214, 72, 60, 0.5);
+}
+
+.todo-list li.list-group-item:nth-child(2n+1) {
+  background: rgba(218, 92, 82, 0.6);
+}
+
+.todo-list li.list-group-item:nth-child(2n+1):hover {
+  background: rgba(222, 112, 103, 0.6);
+}
+
+.todo-list li.list-group-item.completed {
+  background: gray;
+}
+
+.todo-list li.list-group-item.completed:hover {
+  background: #737373;
+}
+
+.todo-list li.list-group-item.completed:nth-child(2n+1) {
+  background: darkgray;
+}
+
+.todo-list li.list-group-item.completed:nth-child(2n+1):hover {
+  background: #9c9c9c;
+}
+
+.todo-list li.list-group-item.completed button.btn {
+  color: white;
+}
+
+.todo-list li.list-group-item.completed div {
+  color: white;
+  text-decoration: line-through;
+}
+
+.todo-list li.list-group-item.completed .fas.fa-check {
+  color: #87ddbc;
+  margin-right: .5rem;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+
+.todo-list li.list-group-item div {
+  cursor: pointer;
+}
+
+.todo-list li.list-group-item button.btn {
+  font-size: 1.25rem;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.todo-list li.list-group-item button.btn:hover {
+  color: white;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.todo-list li.list-group-item .fas.fa-check {
+  opacity: 0;
+  font-weight: 500;
+  color: #87ddbc;
+  -webkit-transition: 0.35s !important;
+  transition: 0.35s !important;
+  margin-right: -0.8rem;
 }
