--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,11 @@ body {
   opacity: 0.7;
   -webkit-transition: 0.25s;
   transition: 0.25s;
-  -webkit-transform: scale(0.95);
-          transform: scale(0.95);
   font-weight: bold;
   color: gray;
 }
 
 .todo-form #todo-input:focus {
-  -webkit-transform: scale(1);
-          transform: scale(1);
   opacity: 1;
   border: 2px solid rgba(209, 123, 123, 0.5);
   border-bottom: 3px solid rgba(209, 123, 123, 0.5);
@@ -45,25 +41,25 @@ body {
 }
 
 .todo-form #todo-input::-webkit-input-placeholder {
-  opacity: inherit;
+  opacity: 0.7;
   -webkit-transition: 0.25s;
   transition: 0.25s;
 }
 
 .todo-form #todo-input:-ms-input-placeholder {
-  opacity: inherit;
+  opacity: 0.7;
   -webkit-transition: 0.25s;
   transition: 0.25s;
 }
 
 .todo-form #todo-input::-ms-input-placeholder {
-  opacity: inherit;
+  opacity: 0.7;
   -webkit-transition: 0.25s;
   transition: 0.25s;
 }
 
 .todo-form #todo-input::placeholder {
-  opacity: inherit;
+  opacity: 0.7;
   -webkit-transition: 0.25s;
   transition: 0.25s;
 }
